[package]
name = "microtile_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
either = { version = "1.9.0", features = [] }
heapless = "0.7.16"
paste = "1.0.14"

[dev-dependencies]
anyhow = "1.0.75"
