[package]
name = "microtile-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/90degs2infty/microtile-engine"
categories = [ "embedded", "games", "no-std" ]
keywords = [ "microbit" ]
description = "A microscopic Tetris® inspired game engine, targeting embedded devices."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
either = { version = "1.9.0", default-features = false }
heapless = "0.7.16"
paste = "1.0.14"

[dev-dependencies]
anyhow = "1.0.75"

[lints.rust]
missing_docs = { level = "warn", priority = 0 }

[lints.rustdoc]
missing_crate_level_docs = { level = "warn", priority = 1 }
unescaped_backticks = { level = "warn", priority = 1 }

[lints.clippy]
cargo = { level = "warn", priority = 2 }
all = { level = "warn", priority = 3 }
pedantic = { level = "warn", priority = 4 }
absolute_paths = { level = "warn", priority = 2 }
